kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: hello-world
    spec:
      containers:
        - name: hello-world
          image: rhysemmas/hello-world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
